# FastApiProject

./: Makefile  README.md  docker-compose.yml
app/: main.py
app/commands/: fixtures.py
app/containers/: base.py  repositories.py  security.py
app/core/: constants.py  settings.py
app/exceptions/: exceptions.py  handlers.py
app/orm/: async_database.py  base.py  database.py
app/orm/alembic/: env.py  script.py.mako
app/orm/alembic/versions/: 2021_10_05_11_17_efdfe4de1d23_initial_migration_create_employee_model.py  2021_10_07_12_54_4e2a7320f3e6_create_address_model_added_relation_to_.py  2021_10_18_20_20_80d23f007bd2_added_product_category_and_unit_tables.py
app/orm/fixtures/config/: fixtures_v1.yaml
app/orm/fixtures/models/v1/: __init__.py  load_address.py  load_goods.py
app/orm/models/: __init__.py  base.py
app/orm/models/goods/: __init__.py  category.py  product.py  unit.py
app/orm/models/users/: address.py  employee.py
app/orm/repositories/: __init__.py  base.py
app/orm/repositories/goods/: category_repository.py  product_repository.py  unit_repository.py
app/orm/repositories/users/: address_repository.py  employee_repository.py
app/orm/schemas/: base_schema.py
app/orm/schemas/query/users/: employee_query.py
app/orm/schemas/request/security/: auth_request.py
app/orm/schemas/request/users/: address_request.py  employee_request.py
app/orm/schemas/response/security/: auth_response.py
app/orm/schemas/response/users/: employee_response.py
app/services/logging/: intercept_handler.py  logging.conf
app/services/orm/: paginator.py
app/services/security/: auth_service.py
app/views/: router.py
app/views/security/: auth_view.py
app/views/users/: employee_view.py
app/worker/: main.py
system/python/: .flake8  Dockerfile  alembic.ini  entrypoint-celery.sh  entrypoint.sh  mypy.ini  noxfile.py  pyproject.toml
