[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["filipp.zotov <f.zotov@datamonsters.com>"]

[tool.poetry.dependencies]
python = "3.9.*"
watchdog = "^2.1.5"
celery = "^5.1.2"
PyYAML = "^5.4.1"
argh = "^0.26.2"
redis = "^3.5.3"
SQLAlchemy-Utils = "^0.37.8"
money = "^1.3.0"
Babel = "^2.9.1"
Faker = "^8.13.2"
aiohttp = "*"
uvicorn = "^0.15.0"
fastapi = "^0.68.2"
boto3 = "^1.17.78"
fastapi-utils = "^0.2.1"
dependency-injector = "^4.36.2"
loguru = "^0.5.3"
alembic = "^1.7.3"
SQLAlchemy = "^1.4.25"
python-jose = "^3.3.0"
passlib = "^1.7.4"

psycopg2-binary = { version = "^2.9.1", optional = true }
asyncpg = { version = "^0.24.0", optional = true }

[tool.poetry.extras]
apgsql = ["asyncpg"]
pgsql = ["psycopg2-binary"]

[tool.poetry.dev-dependencies]
memory-profiler = "^0.58.0"
mypy = "^0.910"
pytest = "*"
safety = "^1.10"
fpgen = {git = "https://github.com/ZotovPhill/FixturesPackGenerator.git", rev = "v0.1.1-alpha"}
coverage = {extras = ["toml"], version = "^6.0.1"}
flake8 = "^3.9.2"
flake8-bugbear = "^21.9.2"
black = "^21.9b0"
nox = "^2021.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://github.com/pytest-dev/pytest/blob/main/pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rfEX -p pytester --strict-markers"
python_files = ["test_*.py", "*_test.py", "tests/python/*.py"]
python_classes = ["Test", "Acceptance"]
python_functions = ["test"]
testpaths = ["tests", "integration",]
xfail_strict = true


[tool.coverage.run]
omit = [".*", "*/site-packages/*"]


[tool.coverage.report]
fail_under = 100


[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | site-packages
    | \.nox
  )/
)
'''